--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4.0"
 dependencies = [
+    "pytest (>=9.0.1,<10.0.0)"
 ]
 
 [tool.poetry]
@@ -16,3 +17,17 @@ packages = [{include = "calculadora", from = "src"}]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pytest (>=9.0.1,<10.0.0)",
+    "pytest-cov (>=7.0.0,<8.0.0)",
+    "blue (>=0.9.1,<0.10.0)",
+    "isort (>=7.0.0,<8.0.0)",
+    "taskipy (>=1.14.1,<2.0.0)"
+]
+doc = [
+    "mkdocs-material (>=9.7.0,<10.0.0)",
+    "mkdocstrings (>=1.0.0,<2.0.0)",
+    "mkdocstrings-python (>=2.0.0,<3.0.0)"
+]
