--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
-    "pytest (>=9.0.1,<10.0.0)"
+    # Dependências de runtime (produção) movidas para um grupo de desenvolvimento,
+    # ou omitidas se não houver dependências de produção.
 ]
 
 [tool.poetry]
