docs: Finaliza a documentação da API, corrigindo a sintaxe do mkdocstrings.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,13 @@ theme:
   logo: assets/calculadora.png
   favicon: assets/calculadora.png
 
-markdown_extensions:
-  - attr_list
 extra_css:
   - stylesheet/extra.css
+markdown_extensions:
+  - attr_list
+
+plugins:
+  - mkdocstrings:
+      handlers:
+        python:
+          paths: [src]
